--- a/displaysysinfo.ui
+++ b/displaysysinfo.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>700</width>
-    <height>400</height>
+    <width>650</width>
+    <height>380</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>288</y>
+     <x>20</x>
+     <y>28</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -34,8 +34,8 @@
   <widget class="QLineEdit" name="GPUFreqEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>285</y>
+     <x>100</x>
+     <y>25</y>
      <width>71</width>
      <height>27</height>
     </rect>
@@ -50,8 +50,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>29</y>
+     <x>60</x>
+     <y>199</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -68,8 +68,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>59</y>
+     <x>60</x>
+     <y>229</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -86,8 +86,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>89</y>
+     <x>60</x>
+     <y>259</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -104,8 +104,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>119</y>
+     <x>60</x>
+     <y>289</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -122,8 +122,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>159</y>
+     <x>60</x>
+     <y>69</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -140,8 +140,8 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>189</y>
+     <x>60</x>
+     <y>99</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -158,8 +158,8 @@
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>219</y>
+     <x>60</x>
+     <y>129</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -176,8 +176,8 @@
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>249</y>
+     <x>60</x>
+     <y>159</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -194,8 +194,8 @@
   <widget class="QLineEdit" name="CPU0FreqEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>25</y>
+     <x>100</x>
+     <y>195</y>
      <width>71</width>
      <height>27</height>
     </rect>
@@ -210,8 +210,8 @@
   <widget class="QLineEdit" name="CPU1FreqEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>55</y>
+     <x>100</x>
+     <y>225</y>
      <width>71</width>
      <height>27</height>
     </rect>
@@ -226,8 +226,8 @@
   <widget class="QLineEdit" name="CPU2FreqEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>85</y>
+     <x>100</x>
+     <y>255</y>
      <width>71</width>
      <height>27</height>
     </rect>
@@ -242,8 +242,8 @@
   <widget class="QLineEdit" name="CPU3FreqEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>115</y>
+     <x>100</x>
+     <y>285</y>
      <width>71</width>
      <height>27</height>
     </rect>
@@ -258,8 +258,8 @@
   <widget class="QLineEdit" name="CPU4FreqEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>155</y>
+     <x>100</x>
+     <y>65</y>
      <width>71</width>
      <height>27</height>
     </rect>
@@ -274,8 +274,8 @@
   <widget class="QLineEdit" name="CPU5FreqEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>185</y>
+     <x>100</x>
+     <y>95</y>
      <width>71</width>
      <height>27</height>
     </rect>
@@ -290,8 +290,8 @@
   <widget class="QLineEdit" name="CPU7FreqEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>245</y>
+     <x>100</x>
+     <y>155</y>
      <width>71</width>
      <height>27</height>
     </rect>
@@ -306,8 +306,8 @@
   <widget class="QLineEdit" name="CPU6FreqEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>215</y>
+     <x>100</x>
+     <y>125</y>
      <width>71</width>
      <height>27</height>
     </rect>
@@ -322,8 +322,8 @@
   <widget class="QLineEdit" name="CPU4TempEdit">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>155</y>
+     <x>220</x>
+     <y>65</y>
      <width>41</width>
      <height>27</height>
     </rect>
@@ -338,8 +338,8 @@
   <widget class="QLineEdit" name="CPU5TempEdit">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>185</y>
+     <x>220</x>
+     <y>95</y>
      <width>41</width>
      <height>27</height>
     </rect>
@@ -354,8 +354,8 @@
   <widget class="QLineEdit" name="CPU6TempEdit">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>215</y>
+     <x>220</x>
+     <y>125</y>
      <width>41</width>
      <height>27</height>
     </rect>
@@ -370,8 +370,8 @@
   <widget class="QLineEdit" name="CPU7TempEdit">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>245</y>
+     <x>220</x>
+     <y>155</y>
      <width>41</width>
      <height>27</height>
     </rect>
@@ -386,7 +386,7 @@
   <widget class="QLCDNumber" name="ARMuVlcd">
    <property name="geometry">
     <rect>
-     <x>380</x>
+     <x>353</x>
      <y>42</y>
      <width>61</width>
      <height>31</height>
@@ -399,7 +399,7 @@
   <widget class="QLCDNumber" name="ARMuAlcd">
    <property name="geometry">
     <rect>
-     <x>380</x>
+     <x>353</x>
      <y>80</y>
      <width>61</width>
      <height>31</height>
@@ -409,7 +409,7 @@
   <widget class="QLCDNumber" name="ARMuWlcd">
    <property name="geometry">
     <rect>
-     <x>380</x>
+     <x>353</x>
      <y>120</y>
      <width>61</width>
      <height>31</height>
@@ -419,7 +419,7 @@
   <widget class="QLCDNumber" name="MEMuWlcd">
    <property name="geometry">
     <rect>
-     <x>450</x>
+     <x>423</x>
      <y>120</y>
      <width>61</width>
      <height>31</height>
@@ -429,7 +429,7 @@
   <widget class="QLCDNumber" name="MEMuVlcd">
    <property name="geometry">
     <rect>
-     <x>450</x>
+     <x>423</x>
      <y>42</y>
      <width>61</width>
      <height>31</height>
@@ -442,7 +442,7 @@
   <widget class="QLCDNumber" name="MEMuAlcd">
    <property name="geometry">
     <rect>
-     <x>450</x>
+     <x>423</x>
      <y>80</y>
      <width>61</width>
      <height>31</height>
@@ -452,7 +452,7 @@
   <widget class="QLCDNumber" name="KFCuWlcd">
    <property name="geometry">
     <rect>
-     <x>520</x>
+     <x>562</x>
      <y>120</y>
      <width>61</width>
      <height>31</height>
@@ -462,7 +462,7 @@
   <widget class="QLCDNumber" name="KFCuVlcd">
    <property name="geometry">
     <rect>
-     <x>520</x>
+     <x>562</x>
      <y>40</y>
      <width>61</width>
      <height>31</height>
@@ -472,7 +472,7 @@
   <widget class="QLCDNumber" name="KFCuAlcd">
    <property name="geometry">
     <rect>
-     <x>520</x>
+     <x>562</x>
      <y>80</y>
      <width>61</width>
      <height>31</height>
@@ -482,7 +482,7 @@
   <widget class="QLCDNumber" name="G3DuWlcd">
    <property name="geometry">
     <rect>
-     <x>590</x>
+     <x>493</x>
      <y>120</y>
      <width>61</width>
      <height>31</height>
@@ -492,7 +492,7 @@
   <widget class="QLCDNumber" name="G3DuAlcd">
    <property name="geometry">
     <rect>
-     <x>590</x>
+     <x>493</x>
      <y>80</y>
      <width>61</width>
      <height>31</height>
@@ -502,7 +502,7 @@
   <widget class="QLCDNumber" name="G3DuVlcd">
    <property name="geometry">
     <rect>
-     <x>590</x>
+     <x>493</x>
      <y>40</y>
      <width>61</width>
      <height>31</height>
@@ -512,7 +512,7 @@
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
-     <x>349</x>
+     <x>322</x>
      <y>49</y>
      <width>31</width>
      <height>17</height>
@@ -530,7 +530,7 @@
   <widget class="QLabel" name="label_11">
    <property name="geometry">
     <rect>
-     <x>326</x>
+     <x>299</x>
      <y>86</y>
      <width>51</width>
      <height>17</height>
@@ -548,7 +548,7 @@
   <widget class="QLabel" name="label_12">
    <property name="geometry">
     <rect>
-     <x>345</x>
+     <x>318</x>
      <y>126</y>
      <width>31</width>
      <height>17</height>
@@ -566,9 +566,9 @@
   <widget class="QLabel" name="label_13">
    <property name="geometry">
     <rect>
-     <x>390</x>
+     <x>369</x>
      <y>20</y>
-     <width>41</width>
+     <width>31</width>
      <height>17</height>
     </rect>
    </property>
@@ -578,15 +578,33 @@
     </font>
    </property>
    <property name="text">
-    <string>ARM</string>
+    <string>A15</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_14">
    <property name="geometry">
     <rect>
-     <x>470</x>
+     <x>438</x>
      <y>20</y>
-     <width>41</width>
+     <width>31</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>A7</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_15">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>20</y>
+     <width>31</width>
      <height>17</height>
     </rect>
    </property>
@@ -599,28 +617,10 @@
     <string>MEM</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_15">
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>20</y>
-     <width>31</width>
-     <height>17</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>10</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>KFC</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_16">
    <property name="geometry">
     <rect>
-     <x>610</x>
+     <x>510</x>
      <y>20</y>
      <width>31</width>
      <height>17</height>
@@ -632,14 +632,14 @@
     </font>
    </property>
    <property name="text">
-    <string>G3D</string>
+    <string>GPU</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_19">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>158</y>
+     <y>68</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -657,7 +657,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>28</y>
+     <y>198</y>
      <width>21</width>
      <height>17</height>
     </rect>
@@ -674,9 +674,9 @@
   <widget class="QwtPlot" name="qwtPlotSensor">
    <property name="geometry">
     <rect>
-     <x>380</x>
+     <x>310</x>
      <y>170</y>
-     <width>231</width>
+     <width>271</width>
      <height>191</height>
     </rect>
    </property>
@@ -684,7 +684,7 @@
   <widget class="QLabel" name="label_17">
    <property name="geometry">
     <rect>
-     <x>620</x>
+     <x>590</x>
      <y>210</y>
      <width>31</width>
      <height>17</height>
@@ -699,14 +699,14 @@
     <string notr="true">color: rgb(50, 160, 140);</string>
    </property>
    <property name="text">
-    <string>ARM</string>
+    <string>A15</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_22">
    <property name="geometry">
     <rect>
-     <x>620</x>
-     <y>230</y>
+     <x>590</x>
+     <y>270</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -726,9 +726,9 @@
   <widget class="QLabel" name="label_23">
    <property name="geometry">
     <rect>
-     <x>620</x>
-     <y>250</y>
-     <width>31</width>
+     <x>590</x>
+     <y>230</y>
+     <width>21</width>
      <height>17</height>
     </rect>
    </property>
@@ -741,14 +741,14 @@
     <string notr="true">color: rgb(0, 255, 0);</string>
    </property>
    <property name="text">
-    <string>KFC</string>
+    <string>A7</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_24">
    <property name="geometry">
     <rect>
-     <x>620</x>
-     <y>270</y>
+     <x>590</x>
+     <y>250</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -762,14 +762,14 @@
     <string notr="true">color: rgb(200, 160, 50);</string>
    </property>
    <property name="text">
-    <string>G3D</string>
+    <string>GPU</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_25">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>30</y>
+     <x>180</x>
+     <y>200</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -786,8 +786,8 @@
   <widget class="QLabel" name="label_26">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>60</y>
+     <x>180</x>
+     <y>230</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -804,8 +804,8 @@
   <widget class="QLabel" name="label_27">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>90</y>
+     <x>180</x>
+     <y>260</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -822,8 +822,8 @@
   <widget class="QLabel" name="label_28">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>120</y>
+     <x>180</x>
+     <y>290</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -840,8 +840,8 @@
   <widget class="QLabel" name="label_29">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>160</y>
+     <x>180</x>
+     <y>70</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -858,8 +858,8 @@
   <widget class="QLabel" name="label_30">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>250</y>
+     <x>180</x>
+     <y>160</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -876,8 +876,8 @@
   <widget class="QLabel" name="label_31">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>220</y>
+     <x>180</x>
+     <y>130</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -894,8 +894,8 @@
   <widget class="QLabel" name="label_32">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>190</y>
+     <x>180</x>
+     <y>100</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -912,8 +912,8 @@
   <widget class="QLabel" name="label_33">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>160</y>
+     <x>270</x>
+     <y>70</y>
      <width>21</width>
      <height>17</height>
     </rect>
@@ -930,8 +930,8 @@
   <widget class="QLabel" name="label_34">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>189</y>
+     <x>270</x>
+     <y>99</y>
      <width>21</width>
      <height>17</height>
     </rect>
@@ -948,8 +948,8 @@
   <widget class="QLabel" name="label_35">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>220</y>
+     <x>270</x>
+     <y>130</y>
      <width>21</width>
      <height>17</height>
     </rect>
@@ -966,8 +966,8 @@
   <widget class="QLabel" name="label_36">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>250</y>
+     <x>270</x>
+     <y>160</y>
      <width>21</width>
      <height>17</height>
     </rect>
@@ -984,8 +984,8 @@
   <widget class="QLabel" name="label_37">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>290</y>
+     <x>180</x>
+     <y>30</y>
      <width>31</width>
      <height>17</height>
     </rect>
@@ -1000,6 +1000,24 @@
    </property>
    <property name="text">
     <string>MHz</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_18">
+   <property name="geometry">
+    <rect>
+     <x>11</x>
+     <y>350</y>
+     <width>111</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>S/W Version : 1.0</string>
    </property>
   </widget>
  </widget>
